2020-08-06 
	Agregar registros en DescriptionsList	
	Parametro DIA_TRABAJO_UN_REGISTRO (S/N)
	Ajustes en Cto24H
	Modificar Test para escoger secciones
	Parametrizar factor felining y fr
	Ajuste de títulos en las instancias de Formulario

2020-08-05 
	Agregar XOrderBy("hora") en todos las instancias de Formulario
	Ajuste en controllers.xml para heredar de Ingenio

2020-08-05 
	Renombrar getFormulario() a getDiaTrabajo()
	Renombrar DiaTrabajo a Formulario

2020-08-04 
	Blc grabar totales de paro

2020-08-03 
	Blc sección: Tiempos
	Agregar campo a entidad Material

2020-07-31 
	Controlador BlcConsultarAction

2020-07-30 
	Propiedad calculada para colecciones

2020-07-29 
	Crear FormularioAction para validar un solo registro

2020-07-28 
	Renombrar FormularioAction a FormularioSaveAction
	Test para validar un solo registro por diaTrabajo
	Informe de avance del sistema
	ParoTest
	Tabla paros

2020-07-25 
	Cto24HTest

2020-07-22 
	Cto24HDetalle8
	Rediseñar Cto24H
	Crear @Embedded Cto24HDetalle4

2020-07-21 
	Ajustar material.csv
	Ajuste de hora en Cto24HDetalle7 (Acidez Volatil)
	Cto24HDetalle6
	Cto24HDetalle5
	Cálculo de totales de Cto24HDetalle4

2020-07-07
	Query de métodos promedio como atributos
	Validar es necesario grabar los promedios (SI)
	Revisar acceso al sistema por IP pública

2020-07-03 
	Cambio de Pestañas por Secciones en Cto24HTest
	Ajuste de hora en Cto24HTest
	Ajuste de hora en BtuLbBagazo
	Ajuste de hora en TamanoGrano
	Ajuste de hora en Grasshoper

2020-07-02 
	Ajuste de hora en AzucarCrudo
	Ajuste de hora en Mieles
	Ajuste de hora en TqFundidor
	Ajuste de hora en Magmas
	Ajuste de hora en AzucarGranel
	Ajuste de hora en MielesNutsch
	Ajuste de hora en Masas
	Ajuste de hora en Fosfatos
	Ajuste de hora en Meladura
	Ajuste de hora en Ph
	Ajuste de hora en Turbiedad

2020-07-01 
	Ajuste de hora en Bagazo
	Validación nulos de query.resultList

2020-06-29 
	Ajuste de hora en Jugo
	Clase con datos generales para pruebas

2020-06-26