@@ -29,7 +29,7 @@ class CanaDetalle1 extends Identifiable {
     @ManyToOne //Sin lazy fetching porque falla al quitar un detalle desde el padre
     Cana cana
     
-    @Stereotype("TIME") @OnChange(TrashCanaDetalle1Action.class) @Required
+    @Stereotype("TIME") @Column(length=5) @OnChange(TrashCanaDetalle1Action.class) @Required
     String horaS
 
     @OnChange(CanaDetalle1Action.class)
