@@ -22,7 +22,7 @@ class MielesDetalle extends Identifiable {
     @ManyToOne //Sin lazy fetching porque falla al quitar un detalle desde el padre
     Mieles mieles
 
-    @Stereotype("TIME") @OnChange(MielesDetalleAction.class) @Required
+    @Stereotype("TIME") @Column(length=5) @OnChange(MielesDetalleAction.class) @Required
     String horaS
 
     @Stereotype("DATETIME") @ReadOnly @Required
