@@ -20,7 +20,7 @@ class MielesNutschDetalle extends Identifiable {
     @ManyToOne //Sin lazy fetching porque falla al quitar un detalle desde el padre
     MielesNutsch mielesNutsch
 
-    @Stereotype("TIME") @OnChange(MielesNutschDetalleAction.class) @Required
+    @Stereotype("TIME") @Column(length=5) @OnChange(MielesNutschDetalleAction.class) @Required
     String horaS
 
     @Stereotype("DATETIME") @ReadOnly @Required
