@@ -4,6 +4,5 @@ package ec.carper.ingenio.test
 class Aux{
     def getDiaTrabajoId() {
         return "ff80808172a5ebad0172c9078f1e0001"
-        //return "3 07/08/2019"
     }
 }
